[package]
name = "htmlsanitize"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
tower-http = { version = "0.3", features = ["cors", "catch-panic"] }
tokio = { version = "1.0", features = ["full"] }
ammonia = "3"
pulldown-cmark = "0.9"