[package]
name = "htmlsanitize"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true  # Automatically strip symbols from the binary.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
axum-macros = "0.3"
tower-http = { version = "0.3", features = ["cors", "catch-panic"] }
tokio = { version = "1.0", features = ["full"] }
ammonia = "3"
pulldown-cmark = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ts-rs = "6.2"
env_logger = "0.9"
serde_yaml = "0.9"
once_cell = "1.17"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "chrono", "uuid", "bigdecimal", "json", "offline"] }