[package]
name = "htmlsanitize"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true # Automatically strip symbols from the binary.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utoipa = { version = "4.2.3", features = ["axum_extras"] }
axum = "0.7"
axum-macros = "0.4"
tower-http = { version = "0.5", features = ["cors", "catch-panic"] }
tokio = { version = "1.0", features = ["full"] }
ammonia = "4"
pulldown-cmark = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ts-rs = "9.0"
env_logger = "0.11"
serde_yaml = "0.9"
once_cell = "1.19"
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
    "bigdecimal",
    "json",
] }
moka = { version = "0.12.10", features = ["future"] }
